@@ -2,6 +2,7 @@ Revision history for Twitter::API
 
 {{$NEXT}}
   - documented trait ApiMethods
+  - fixed broken ApiMethods methods and the test that wasn't catching them
 
 0.0100  2016-12-02 13:32:27 PST (TRIAL RELEASE)
   - initial release
